--- a/certificacao-csharp-pt1/certificacao-csharp-pt1.csproj
+++ b/certificacao-csharp-pt1/certificacao-csharp-pt1.csproj
@@ -101,6 +101,10 @@
     <Compile Include="Aula6 - cast de tipos\2 - Conversões explícitas\depois\ConversoesExplicitas.cs" />
     <Compile Include="Aula6 - cast de tipos\3 - Operadores IS e AS\antes\3 - Operadores IS e AS.cs" />
     <Compile Include="Aula6 - cast de tipos\3 - Operadores IS e AS\depois\3 - Operadores IS e AS.cs" />
+    <Compile Include="Aula6 - cast de tipos\4 - Conversões definidas pelo usuário\antes\OperadoresDeConversao.cs" />
+    <Compile Include="Aula6 - cast de tipos\4 - Conversões definidas pelo usuário\depois\OperadoresDeConversao.cs" />
+    <Compile Include="Aula6 - cast de tipos\5 - Conversões com classes auxiliares\antes\MetodosAuxiliares.cs" />
+    <Compile Include="Aula6 - cast de tipos\5 - Conversões com classes auxiliares\depois\MetodosAuxiliares.cs" />
     <Compile Include="IAulaItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
